layout(header,main,footer)분리

--- a/index.html
+++ b/index.html
@@ -10,7 +10,10 @@
     <header>
       <div id="logo-text">Lorem</div>
       <div id="header-text">
-        <div id="header-text-main">Lorem ipsum dolor sit amet.</div>
+        <div id="header-text-main">
+          Lorem ipsum<br />
+          dolor sit amet.
+        </div>
         <div id="header-text-sub">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
           quo dignissimos accusantium magni dicta cum, veniam aperiam quas
@@ -18,5 +21,83 @@
         </div>
       </div>
     </header>
+    <main>
+      <section id="section-about">
+        <h2>Lorem ipsum dolor sit amet.</h2>
+        <div id="section-about-words">
+          <h3>Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+          <p>
+            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tenetur
+            dolore voluptatum, reprehenderit sunt quae aspernatur vero
+            consectetur a temporibus aperiam quas corrupti eius, mollitia
+            nesciunt, corporis velit consequuntur at voluptatibus cupiditate
+            tempore autem perspiciatis! Sint veniam eius molestiae alias id
+            deleniti possimus fuga minima atque voluptates. Qui minima
+            perferendis illo.
+          </p>
+          <a href="#" class="btn-text">Read More</a>
+          <a href="#" class="btn-text">Read More</a>
+        </div>
+        <div id="section-about-photo">
+          <div class="photo"><img src="images/yuyuan.jpg" alt="photo 1" /></div>
+          <div class="photo">
+            <img src="images/shanghai-night1.jpg" alt="photo 2" />
+          </div>
+        </div>
+      </section>
+      <section id="section-etc">
+        <div id="etc-1">
+          <div class="etc-icon">
+            <i class="material-icons">card_travel</i>
+          </div>
+          <div class="etc-text">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
+              animi provident totam perspiciatis, nostrum voluptas officiis
+              temporibus dolorum ipsum maxime!
+            </p>
+          </div>
+        </div>
+        <div id="etc-2">
+          <div class="etc-icon">
+            <i class="material-icons">loyalty</i>
+          </div>
+          <div class="etc-text">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
+              animi provident totam perspiciatis, nostrum voluptas officiis
+              temporibus dolorum ipsum maxime!
+            </p>
+          </div>
+        </div>
+        <div id="etc-3">
+          <div class="etc-icon">
+            <i class="material-icons">extension</i>
+          </div>
+          <div class="etc-text">
+            <h3>Lorem, ipsum dolor.</h3>
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error
+              animi provident totam perspiciatis, nostrum voluptas officiis
+              temporibus dolorum ipsum maxime!
+            </p>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div id="logo-text-footer">Lorem</div>
+      <div id="copyright">
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel quo
+          incidunt nam adipisci eligendi possimus, voluptatum voluptates
+          architecto modi deserunt. Vitae dolorem nemo ratione fuga culpa!
+          Consectetur suscipit corrupti est.
+        </p>
+        <p>Copyright &copy; 2020 Lorem All</p>
+      </div>
+    </footer>
   </body>
 </html>
