--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             deleniti possimus fuga minima atque voluptates. Qui minima
             perferendis illo.
           </p>
-          <a href="#" class="btn-text">Read More</a>
+          <a href="#" class="btn-text u-margin-right-small">Read More</a>
           <a href="#" class="btn-text">Read More</a>
         </div>
         <div id="section-about-photo">
@@ -46,7 +46,7 @@
         </div>
       </section>
       <section id="section-etc">
-        <div id="etc-1">
+        <div id="etc-1" class="etc">
           <div class="etc-icon">
             <i class="material-icons">card_travel</i>
           </div>
@@ -59,7 +59,7 @@
             </p>
           </div>
         </div>
-        <div id="etc-2">
+        <div id="etc-2" class="etc">
           <div class="etc-icon">
             <i class="material-icons">loyalty</i>
           </div>
@@ -72,7 +72,7 @@
             </p>
           </div>
         </div>
-        <div id="etc-3">
+        <div id="etc-3" class="etc">
           <div class="etc-icon">
             <i class="material-icons">extension</i>
           </div>
@@ -90,8 +90,8 @@
     <footer>
       <div id="logo-text-footer">Lorem</div>
       <div id="copyright">
-        <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel quo
+
+        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel quo
           incidunt nam adipisci eligendi possimus, voluptatum voluptates
           architecto modi deserunt. Vitae dolorem nemo ratione fuga culpa!
           Consectetur suscipit corrupti est.
